Fixed scrolling and flex
Disabled horizontal scrolling + changed the flex div containing the content and the slider

--- a/styles.css
+++ b/styles.css
@@ -3,13 +3,17 @@ body {
     src: url("/fonts/JetBrainsMono-Regular.ttf");
     max-width: 1200px;
     margin: 0 auto;
-    display: flex;
-    flex-direction: row-reverse;
+    overflow-x: hidden;
     background-color: black;
 }
 
+.wrapper {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
 @media screen and (max-width: 1200px) {
-    body {
+    .wrapper {
         display: flex;
         flex-direction: column;
     }
